# g22-study-bot

./: Cargo.toml
src/: commands.rs  flash_cards.rs  main.rs
src/commands/: assignments.rs  calendar.rs
