[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "g22-study-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
etcetera = "0.3.1"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
serenity = "0.9.0-rc.4"
tokio = {version = "0.2.22", features = ["macros", "rt-core"]}
